# pandoc-videofilter

./: .gitignore  README.md  circle.yml  stack.yaml  videofilter.cabal
app/: Main.hs
src/: Definitions.hs  Lib.hs  VideoParser.hs  VideoRenderer.hs  WrapperElement.hs
test/: Spec.hs
