name:                videofilter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/videofilter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , VideoParser
                     , Definitions
                     , VideoRenderer
  build-depends:       base >= 4.7 && < 5
                     , lucid
                     , pandoc
                     , pandoc-types
                     , parsec >= 3.1.11
                     , text >= 1.2.2.1
  default-language:    Haskell2010

executable videofilter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , videofilter
  default-language:    Haskell2010

test-suite videofilter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , videofilter
                     , hspec
                     , pandoc-types

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/videofilter
